--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -13,4 +13,6 @@ return ConfigUsedWithPhpstanWithoutNullableReturn::createWithPaths(...[
     __DIR__ . '/src/',
     __DIR__ . '/Tests/',
     __DIR__ . '/PHPStan/',
+    __DIR__ . '/Psalm/',
+    __DIR__ . '/quick-checks/',
 ]);
