--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -10,6 +10,7 @@ namespace SignpostMarv\CS;
 
 return ConfigUsedWithPhpstanWithoutNullableReturn::createWithPaths(...[
     __FILE__,
+    __DIR__ . '/xdebug-filter.phpunit.php',
     __DIR__ . '/src/',
     __DIR__ . '/Tests/',
     __DIR__ . '/PHPStan/',
