attempting to improve coverage

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,4 @@ parameters:
     ignoreErrors:
         - "/Call to function method_exists\\(\\) with string and '__[gs]et' will always evaluate to false./"
         - "/Access to an undefined property SignpostMarv\\\\DaftMagicPropertyAnalysis\\\\Tests\\\\DaftMagicPropertyAnalysis\\\\Fixtures\\\\ucwordsPrefixed(TypeInterface|Implementation)::\\$fooBar/"
+        - "/^PHPDoc tag @(?:var|param|return) has invalid value \\([^\\)]*(?:array){[^\\)]+\\)/"
