--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,3 +7,4 @@ parameters:
         - "/Call to function method_exists\\(\\) with string and '__[gs]et' will always evaluate to false./"
         - "/Access to an undefined property SignpostMarv\\\\DaftMagicPropertyAnalysis\\\\Tests\\\\DaftMagicPropertyAnalysis\\\\Fixtures\\\\ucwordsPrefixed(TypeInterface|Implementation)::\\$fooBar/"
         - "/^PHPDoc tag @(?:var|param|return) has invalid value \\([^\\)]*(?:array){[^\\)]+\\)/"
+        - "/^Static method SignpostMarv\\\\DaftMagicPropertyAnalysis\\\\DefinitionAssistant::RegisterType\\(\\) invoked with 3 parameters, at least 4 required.$/"
