--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "povils/phpmnd": "^2.0",
         "roave/security-advisories": "dev-master",
         "sebastian/phpcpd": "^4.1",
-        "signpostmarv/php-cs-fixer-config": "^0.6.0",
+        "signpostmarv/php-cs-fixer-config": "^0.7|^0.8",
         "vimeo/psalm": "^3.0,>=3.0.11"
     }
 }
