--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,6 +22,7 @@
   <filter>
     <whitelist processUncoveredFilesFromWhitelist="true">
       <directory suffix=".php">./src/</directory>
+      <directory suffix=".php">./Tests/</directory>
       <file>./Tests/DefinitionAssistant.php</file>
     </whitelist>
   </filter>
