--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         ]
     },
     "require": {
-        "php": "^7.1"
+        "php": "^7.1,<=7.1.3"
     },
     "require-dev": {
         "infection/infection": "^0.11.5",
