--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,13 +2,16 @@ build:
   nodes:
     php71:
       environment:
-        php: 7.1.0
-    php711:
+        php: 7.1
+    php713:
       environment:
-        php: 7.1.1
-    php712:
+        php: 7.1.3
+    php72:
       environment:
-        php: 7.1.2
+        php: 7.2
+    php73:
+      environment:
+        php: 7.3
     analysis:
       project_setup:
         override: true
